# constraint_game_solver

./: CMakeLists.txt  README.md
apps/: main.cpp
include/: AbstractConstraint.h  AbstractProblem.h  AbstractSolver.h  ConstraintAllInside.h  ProblemSudoku.h
src/: AbstractProblem.cpp  AbstractSolver.cpp  ConstraintAllInside.cpp  ProblemSudoku.cpp
